--- a/src/components/List/list.css
+++ b/src/components/List/list.css
@@ -16,9 +16,7 @@
   border-radius: 10px;
   position: sticky;
   top: 10px;
-}
-.listResult {
-  flex: 3;
+  height: max-content;
 }
 .lsTitle {
   font-size: 20px;
@@ -45,4 +43,31 @@
   padding: 5px;
   background-color: aliceblue;
   cursor: pointer;
+}
+
+.lsOptionItem {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  color: #000;
+  font-size: 12px;
+  font-weight: 500;
+}
+.lsOptionInput {
+  width: 50%;
+}
+.lsOptions {
+  padding: 10px;
+}
+.listSearch > button {
+  padding: 10px;
+  background-color: var(--primary-color);
+  border: none;
+  cursor: pointer;
+  color: white;
+  width: 100%;
+  font-weight: 500;
+}
+.listResult {
+  flex: 3;
 }
