--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   /* height: 50px; */
-  background-color: var(--primary-color);
+  background-color: #281139;
   display: flex;
   justify-content: center;
 }
