--- a/src/auth/customerSignup.css
+++ b/src/auth/customerSignup.css
@@ -2,6 +2,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
+  background-color: slateblue;
 }
 .customerSignupContainerinner {
   /* padding: 50px; */
@@ -22,6 +23,6 @@
   margin-left: 90px;
 }
 
-customerSignupContainer > label {
+.customerSignupContainer > label {
   color: black;
 }
